fix: show x-scrollbar in codeblock if unwrapped, simplify style definitions (#6266)
* fix: show x-scrollbar in codeblock if unwrapped, simplify style definitions

* chore: clean up useless code

--- a/src/renderer/src/assets/styles/markdown.scss
+++ b/src/renderer/src/assets/styles/markdown.scss
@@ -321,7 +321,6 @@ mjx-container {
 
     .cm-lineWrapping * {
       word-wrap: break-word;
-      white-space: pre-wrap;
     }
   }
 }
